add java overview

--- a/Schedule/week3/jQuery/index.html
+++ b/Schedule/week3/jQuery/index.html
@@ -6,11 +6,13 @@
     <title>jQuery</title>
   </head>
   <body>
-    <ul id="cool-input">
-      <li id="first-li">this is li 1</li>
-      <li>this is li 2</li>
-      <li>this is li 3</li>
-    </ul>
+    <div id='rating'>
+      <span>*</span>
+      <span>*</span>
+      <span>*</span>
+      <span>*</span>
+      <span>*</span>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
